tests/suite/errors/e05_missing_struct_field.rs
// err: missing field `y` in `Point`

struct Point {
    x: i32,
    y: i32,
}

fn main() {
    let p: Point = Point { x: 1 };
}
